# readme-weaver

./: .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: release.yaml
readme_weaver/: include_content_reader.py  include_metadata.py  include_metadata_extractor.py  main.py  readme_weaver.py
tests/: test_readme_weaver.py
